syntax = "proto3";
option csharp_namespace = "Catalog.Grpc";
package catalog;
service CatalogGrpc{
  rpc GetProducts (GetProductsRequest) returns (GetProductsResponse);
  rpc GetProductById (GetProductByIdRequest) returns (GetProductByIdResponse);
  rpc GetCountProduct (GetCountProductRequest) returns (GetCountProductResponse);
  rpc GetAllAvailableProducts (GetAllAvailableProductsRequest) returns (GetAllAvailableProductsResponse);
}
// Message
message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  string thumbnail = 4;
}

message GetProductsRequest {
  string search_text = 1;
  repeated string ids = 2;
}

message GetProductsResponse {
  repeated Product products = 1;
}

message GetProductByIdRequest {
  string id = 1;
}

message GetProductByIdResponse {
  Product product = 1;
}

message GetCountProductRequest { }

message GetCountProductResponse {
  int32 count = 1;
}

message GetAllAvailableProductsRequest {
  string search_text = 1;
  repeated string ids = 2;
}

message GetAllAvailableProductsResponse {
  repeated Product products = 1;
}