using Order.Application.Models.Response.Externals;
using Order.Application.Services;
using Catalog.Grpc;
using Microsoft.Extensions.Logging;

namespace Order.Infrastructure.Services;

public sealed class CatalogGrpcService(CatalogGrpc.CatalogGrpcClient grpcClient, ILogger<CatalogGrpcService> logger) : ICatalogGrpcService
{
    public async Task<GetAllProductsResponse?> GetAllAvailableProductsAsync(string[]? ids = null, string searchText = "", CancellationToken cancellationToken = default)
    {
        try
        {
            var request = new GetAllAvailableProductsRequest { SearchText = searchText };
            if (ids is not null && ids.Length > 0)
            {
                request.Ids.AddRange(ids);
            }

            var result = await grpcClient.GetAllAvailableProductsAsync(request, cancellationToken: cancellationToken);

            var response = new GetAllProductsResponse
            {
                Items = result.Products
                    .Select(product => (ProductResponse?)new ProductResponse
                    {
                        Id = Guid.Parse(product.Id),
                        Price = (decimal)product.Price,
                        Name = product.Name,
                    }).ToList(),
            };
            return response;
        }
        catch (Exception ex)
        {
            logger.LogWarning(ex, "Failed to get all available products from Catalog Grpc service");
            return null;
        }
    }

    public async Task<GetAllProductsResponse?> GetAllProductsAsync(string[]? ids = null, string searchText = "", CancellationToken cancellationToken = default)
    {
        try{
            var request = new GetProductsRequest { SearchText = searchText };
            if(ids is not null && ids.Length>0){
                request.Ids.AddRange(ids);
            }
            var result=await grpcClient.GetProductsAsync(request, cancellationToken: cancellationToken);
            
            var response = new GetAllProductsResponse
            {
                Items = result.Products
                    .Select(product => (ProductResponse?)new ProductResponse
                    {
                        Id = Guid.Parse(product.Id),
                        Price = (decimal)product.Price,
                        Name = product.Name,
                    }).ToList(),
            };
            return response;
        }catch(Exception ex){
            logger.LogWarning(ex, "Failed to get all products from Catalog Grpc service");
            return null;
        }
    }

    public async Task<ProductResponse?> GetProductByIdAsync(string productId, CancellationToken cancellationToken = default)
    {
        try{
            var result=await grpcClient.GetProductByIdAsync(new GetProductByIdRequest{
                Id=productId
            }, cancellationToken: cancellationToken);
            var product = result.Product;
            return new ProductResponse{
                Id=Guid.Parse(product.Id),
                Price=(decimal)product.Price,
                Name=product.Name,
                
            };

        }catch(Exception ex){
            logger.LogWarning(ex, "Failed to get product by ID {ProductId} from Catalog Grpc service", productId);
            return null;
        }
    }

   
}

